--- a/app/app.html
+++ b/app/app.html
@@ -14,6 +14,7 @@
         }
       }());
     </script>
+    <link rel="stylesheet" href="./app.global.font-roboto" />
   </head>
   <body>
     <div id="root"></div>
